--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 /* Classe Immagini di sfondo */
 
 .square-1{
@@ -14,51 +15,63 @@
 .square-1b{
     background-image: url(./img/1b.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 
 .square-2{
     background-image: url(./img/2.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 .square-2b{
     background-image: url(./img/2b.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 
 .square-3{
     background-image: url(./img/3.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 .square-3b{
     background-image: url(./img/3b.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 .square-4{
     background-image: url(./img/4.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 .square-4b{
     background-image: url(./img/4b.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 
 .square-5{
     background-image: url(./img/5.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 .square-5b{
     background-image: url(./img/5b.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 
 .square-6{
     background-image: url(./img/6.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 .square-6b{
     background-image: url(./img/6b.webp);
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
+
 
 
 
@@ -92,8 +105,46 @@ main{
     height: 416px;
     background-color: pink;
     margin: 5px;
+    margin-top: 20px;
+    position: relative;
+}
+.text-box{
+    display: inline-block;
+    width: calc(80% / 3 - 20px);
+    margin: 5px;
+    text-align: left;
 }
 
+.brand{
+    text-align: left;
+    font-size: 10px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.title{
+    text-align: left;
+    font-size: 12px;
+    font-weight: bolder;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.price{
+    text-align: left;
+    font-size: 10px;
+    font-weight: bolder;
+    color: rgb(255, 0, 0);
+    font-family: Arial, Helvetica, sans-serif;
+}
+.sales{
+    text-align: left;
+    font-size: 10px;
+    font-weight: bolder;
+    text-decoration: line-through;
+    color: rgb(0, 0, 0);
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 
 
@@ -109,12 +160,75 @@ main{
     line-height: 30px;
     color: black;
     position: absolute;
+    z-index: 1;
 }
+
+.sales-marker{
+    display: inline;
+    width: 25px;
+    height: 14px;
+    background-color: rgb(255, 0, 0);
+    text-align: center;
+    font-size: 10px;
+    line-height: 10px;
+    padding: 2px;
+    color: rgb(255, 255, 255);
+    position: absolute;
+    z-index: 1;
+}
+
+.sosten{
+    display: inline;
+    width: 60px;
+    height: 14px;
+    background-color: rgb(0, 136, 7);
+    text-align: center;
+    font-size: 10px;
+    line-height: 10px;
+    padding: 2px;
+    color: rgb(255, 255, 255);
+    position: absolute;
+    z-index: 1;
+}
+
+.square-1 .sales-marker{
+    bottom: 30px;
+    left: 0;
+}
+.square-1 .sosten{
+    bottom: 30px;
+    left: 27px;
+}
+
+.square-2 .sales-marker{
+    bottom: 30px;
+    left: 0;
+}
+.square-3 .sosten{
+    bottom: 30px;
+    left: 0px;
+}
+
+.square-4 .sales-marker{
+    bottom: 30px;
+    left: 0;
+}
+.square-4 .sosten{
+    bottom: 30px;
+    left: 27px;
+}
+.square-6 .sosten{
+    bottom: 30px;
+    left: 0px;
+}
+
+
+
+
 
 .overlay{
     width: 100%;
     height: 100%;
-    border: 3px solid black;
     opacity: 0;
     position: relative;
 }
@@ -122,22 +236,4 @@ main{
 
 .overlay:hover{
     opacity: 1;
-}
-
-.overlay::before{
-    content: "Ciao";
-    width: 50px;
-    height: 50px;
-    border: 1px solid black;
-    border-radius: 50%;
-    background-color: crimson;
-    position: absolute;
-    top: -25px;
-    right: -25px;
-    font-size: 18px;
-    font-weight: bolder;
-    font-family: arial;
-    text-align: center;
-    line-height: 50px;
-    color: black;
 }
